[package]
name = "bynar"
version = "0.1.2"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "Server remediation as a service"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.deb]
maintainer = "Chris Holcombe <xfactor973@gmail.com>"
depends = "$auto, systemd"
section = "utility"
assets = [
	["etc/bynar/bynar.json", "/etc/bynar/bynar.json", "666"],
	["target/release/bynar", "usr/sbin/", "755"],
	["target/release/client", "usr/bin/bynar-client", "755"],
	["target/release/disk-manager", "usr/sbin/", "755"],
	["systemd/disk-manager.service", "/lib/systemd/system/disk-manager.service", "644"],
    ["README.md", "usr/share/doc/bynar/README", "644"],
]

[workspace]

[dev-dependencies]
lazy_static = "~1.1"
mocktopus = "0.5.0"
rand = "~0.5"

[dependencies]
api = { path = "api" }
blkid = "~0.2"
block-utils = {git = "https://github.com/cholcombe973/block-utils"}
ceph = "~1.0"
clap = "~2"
client = { path = "client" }
disk-manager = { path = "disk-manager" }
dmi = {git = "https://github.com/cholcombe973/dmi"}
fstab = "~0.3"
gluster = "~1.0"
goji = { git = "https://github.com/cholcombe973/goji.git" }
gpt = { git = "https://github.com/Quyzi/gpt"}
hashicorp_vault = { git = "https://github.com/cholcombe973/vault-rs.git" }
helpers = { path = "helpers" }
hostname = "~0.1"
init-daemon = "~0.1"
json = "~0.11"
libatasmart = "~0.1"
libc = "~0.2"
log = "~0.4"
petgraph = "~0.4"
protobuf = "~2"
rayon = "~1.0"
reqwest = "~0.8"
rusqlite = "~0.14"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
simplelog = "~0.5"
slack-hook = "~0.7"
tempdir = "~0.3"
time = "~0.1"
uname = "~0.1"
uuid = { version="~0.7", features = ["v4"]}
zmq = {version="~0.8"}
