[package]
name = "bynar"
version = "0.1.3"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "Server remediation as a service"
license = "Apache-2.0"
readme = "README.md"
edition = '2018'

[package.metadata.deb]
maintainer = "Chris Holcombe <xfactor973@gmail.com>"
depends = "$auto, systemd"
section = "utility"
assets = [
	["config/bynar.json", "/etc/bynar/bynar.json", "666"],
	["config/disk-manager.json", "/etc/bynar/disk-manager.json", "666"],
	["config/ceph.json", "/etc/bynar/ceph.json", "666"],
	["target/release/bynar", "usr/sbin/", "755"],
	["target/release/bynar-client", "usr/bin/bynar-client", "755"],
	["target/release/disk-manager", "usr/sbin/", "755"],
	["config/disk-manager.service", "/lib/systemd/system/disk-manager.service", "644"],
    ["README.md", "usr/share/doc/bynar/README", "644"],
]
# Config files that apt shouldn't overwrite
conf-files = [
	"/etc/bynar/bynar.json",
	"/etc/bynar/disk-manager.json",
	"/etc/bynar/ceph.json"
]

[workspace]

[dev-dependencies]
lazy_static = "~1.2"
mocktopus = {git = "https://github.com/asomers/Mocktopus.git", branch="get_type_id" }
rand = "~0.5"

[dependencies]
api = { path = "api" }
blkid = "~0.2"
block-utils = "~0.6"
bytes = "*"
ceph = "~2.0"
ceph-safe-disk = "~0.1"
chrono = "~0.4"
clap = "~2"
dirs = "~1.0"
dmi = {git = "https://github.com/cholcombe973/dmi"}
fstab = "~0.3"
gluster = "~1.0"
goji = { git = "https://github.com/cholcombe973/goji.git" }
gpt = { git = "https://github.com/Quyzi/gpt"}
hashicorp_vault = { git = "https://github.com/cholcombe973/vault-rs.git" }
hostname = "~0.1"
init-daemon = "~0.1"
json = "~0.11"
libatasmart = "~0.1"
libc = "~0.2"
libredfish = {git = "https://github.com/cholcombe973/libredfish"}
log = "~0.4"
lvm = "~0.3"
nix = "~0.13"
petgraph = "~0.4"
pnet = "~0.21"
postgres = "~0.15"
postgres-shared = "~0.4"
protobuf = "~2"
pwd = "~1.3"
r2d2 = "~0.8"
r2d2_postgres = "~0.14"
rayon = "~1.0"
reqwest = "~0.9"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
simplelog = "~0.5"
slack-hook = "~0.8"
tempdir = "~0.3"
time = "~0.1"
uname = "~0.1"
uuid = { version="~0.7", features = ["v4"]}
zmq = {version="~0.8"}

[lib]
name = "helpers"
path = "src/lib/lib.rs"

[[bin]]
name = "bynar-client"
path = "src/client.rs"

[[bin]]
name = "bynar"
path = "src/main.rs"

[[bin]]
name = "disk-manager"
path = "src/disk_manager.rs"
