
[package]
name = "bynar"
version = "0.1.6"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "Server remediation as a service"
license = "Apache-2.0"
readme = "README.md"
edition = '2018'

[package.metadata.deb]
maintainer = "Chris Holcombe <xfactor973@gmail.com>"
# depends = "$auto, systemd"
depends = "libstdc++6 (>= 5.4.0), libdevmapper-event1.02.1 (>= 2:1.02.110), libsodium18 (>= 1.0.8), zlib1g (>= 1:1.2.8.dfsg), libc6 (>= 2.23), libpcre3 (>= 2:8.38), libibverbs1 (>= 1.1.8), libnss3 (>= 2:3.28.4), libblkid1 (>= 2.27.1), liblvm2app2.2 (>= 2.02.133), libzmq5 (>= 4.1.4), systemd, libudev1 (>= 229), libgcc1 (>= 1:6.0.1), libuuid1 (>= 2.27.1), librados2 (>= 12.2.4), libnspr4 (>= 2:4.13.1), libselinux1 (>= 2.4), libatasmart4 (>= 0.19), libdevmapper1.02.1 (>= 2:1.02.110), libssl1.0.0 (>= 1.0.2g), smartmontools"
section = "utility"
assets = [
	["config/bynar.json", "/etc/bynar/bynar.json", "666"],
	["config/disk-manager.json", "/etc/bynar/disk-manager.json", "666"],
	["config/ceph.json", "/etc/bynar/ceph.json", "666"],
	["etc/logrotate.d/bynar", "/etc/logrotate.d/bynar", "644"],
	["target/release/bynar", "usr/sbin/", "755"],
	["target/release/bynar-client", "usr/bin/bynar-client", "755"],
	["target/release/disk-manager", "usr/sbin/", "755"],
	["config/disk-manager.service", "/lib/systemd/system/disk-manager.service", "644"],
    ["README.md", "usr/share/doc/bynar/README", "644"],
]
# Config files that apt shouldn't overwrite
conf-files = [
	"/etc/bynar/bynar.json",
	"/etc/bynar/disk-manager.json",
	"/etc/bynar/ceph.json"
]

[workspace]

[dev-dependencies]
lazy_static = "~1.4"
mocktopus = "~0.7.0" #{git = "https://github.com/asomers/Mocktopus.git", branch = "master"}
rand = "~0.7"

[dependencies]
api = { path = "api" }
blkid = {git = "https://github.com/cholcombe973/blkid.git"}#"~0.2"
block-utils = {git = "https://github.com/cholcombe973/block-utils.git"}#"~0.6"
bytes = "*"
ceph = {git = "https://github.com/mzhong1/ceph-rust"}#"~3.0"
chrono = "~0.4"
clap = "~2"
derive-error = "0.0.4"
dirs = "~2.0"
dmi = {git = "https://github.com/cholcombe973/dmi"}
fstab = "~0.3"
gluster = "~1.0"
goji = { git = "https://github.com/cholcombe973/goji.git" }
gpt = { git = "https://github.com/Quyzi/gpt"}
hashicorp_vault = { git = "https://github.com/cholcombe973/vault-rs.git" }
hostname = "~0.1"
init-daemon = "~0.1"
json = "~0.11"
libatasmart = "~0.1"
libc = "~0.2"
libredfish = {git = "https://github.com/cholcombe973/libredfish", branch = "generic"}
log = "~0.4"
lvm = "~0.3"
nix = "~0.15"
petgraph = "~0.4"
pnet = "~0.23"
postgres = "~0.15"
postgres-shared = "~0.4"
protobuf = "~2"
pwd = "~1.3"
r2d2 = "~0.8"
r2d2_postgres = "~0.14"
rayon = "~1.0"
reqwest = "~0.9"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
simplelog = "~0.5"
slack-hook = "~0.8"
tempdir = "~0.3"
time = "~0.1"
uname = "~0.1"
uuid = { version="~0.7", features = ["serde", "v4"]}
zmq = {version="~0.8"}
boxfnonce = "0.1.1"
daemonize = "~0.4.1"

[lib]
name = "helpers"
path = "src/lib/lib.rs"

[[bin]]
name = "bynar-client"
path = "src/client.rs"

[[bin]]
name = "bynar"
path = "src/main.rs"

[[bin]]
name = "disk-manager"
path = "src/disk_manager.rs"