[package]
name = "disk-manager"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]

[dependencies]
api = { path = "../api", version = "*"}
block-utils = {git = "https://github.com/cholcombe973/block-utils"}
bytes = "*"
ceph-rust = {git = "https://github.com/cholcombe973/ceph-rust"}
ceph-safe-disk = "~0.1"
clap = "*"
fstab = "*"
gpt = { git = "https://github.com/Quyzi/gpt", branch="integration"}
helpers = { path="../helpers", version="*"}
init-daemon = "*"
libc = "*"
log = "*"
mktemp = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
simplelog = "*"
uuid = { version="*", features = ["v4"]}
zmq = "*"
