[package]
name = "disk-manager"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]

[dependencies]
api = { path = "../api", version = "*"}
block-utils = {git = "https://github.com/cholcombe973/block-utils"}
bytes = "*"
ceph = "*"
ceph-safe-disk = "~0.1"
clap = "*"
fstab = "*"
gpt = { git = "https://github.com/Quyzi/gpt"}
gluster = "*"
hashicorp_vault = { git = "https://github.com/cholcombe973/vault-rs.git" }
helpers = { path="../helpers", version="*"}
init-daemon = "~0.1"
libc = "~0.2"
log = "~0.4"
protobuf = "~2"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
simplelog = "*"
tempdir = "*"
uuid = { version="~0.7", features = ["v4"]}
zmq = "*"
