[package]
name = "helpers"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]

[dependencies]
api = { path = "../api", version = "*"}
block-utils = {git = "https://github.com/cholcombe973/block-utils"}
dmi = {git = "https://github.com/cholcombe973/dmi"}
hashicorp_vault = { git = "https://github.com/cholcombe973/vault-rs.git" }
log = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
uname = "*"
zmq = "*"
