[package]
name = "helpers"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]

[dependencies]
api = { path = "../api", version = "*"}
block-utils = {git = "https://github.com/cholcombe973/block-utils"}
dmi = {git = "https://github.com/cholcombe973/dmi"}
hashicorp_vault = { git = "https://github.com/cholcombe973/vault-rs.git" }
hostname = "~0.1"
log = "~0.4"
protobuf = "~2"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
uname = "~0.1"
zmq = "*"
